<resources>
    <string name="app_name">Multiverse of Movie</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back_drop_image">Back drop image</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="default_error_message">something goes wrong</string>
    <string name="book_tickets">Book Tickets</string>
    <string name="genres">Genres</string>
    <string name="release">Release</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="retry">Retry</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
</resources>